# 14-lb-14-lb

./: .gitignore  LBMobj.hpp  README.md
Project/: .gitignore  CMakeLists.txt  Dockerfile  LBM.cpp  LBM.cu  LBM.h  LBM.hpp  LBM_simulation  LBMobj.cpp  LBMobj.hpp  LidDrivenCavity.cpp  LidDrivenCavity.hpp  LidDrivenCavity3D.cpp  LidDrivenCavity3D.hpp  ObstacleLiftDrag.cpp  ObstacleLiftDrag.hpp  README.md  VelocitySet.cpp  bin_to_gif.py  bin_to_gif.py.old  bin_to_gif_arrows.py  bin_to_validation_csv.py  bin_to_vtk.py  comparision.txt  comparison_c_cpp.txt  comparisons.txt  compile.sh  compose.yml  conf.def  csv_to_gif.py  csv_to_vtk.py  gif3D.py  ldc_sim  main.cpp  main.cu  mpi_fast_test.sh  mpi_test.sh  sim  simulation_data.csv  simulation_parameters.csv  (+4 more)
Project/include/LatticeBoltzmannMethod/: LBM.hpp  LidDrivenCavity3D.hpp  Obstacle.hpp  ObstacleLiftDrag.hpp
Project/results/scalability/: scalability.csv
Project/results/tools/: bin_to_gif.py  bin_to_gif_obst.py  bin_to_validation_csv.py  bin_to_vtk.py
Project/src/: LBM.cpp  LidDrivenCavity3D.cpp  ObstacleLiftDrag.cpp  VelocitySet.cpp
Project/validation/: simulation_data.csv  u_velocity_center_vertical_paper.csv  v_velocity_center_horizontal_paper.csv  validation.asv  validation.m
Project/validation/100/: simulation_parameters.csv  u_x_line_center.csv  u_z_line_center.csv
Project/validation/1000/: Reynolds1000_u.xlsx  Reynolds1000_v.xlsx
Project/validation/400/: simulation_parameters.csv  u_x_line_center.csv  u_z_line_center.csv
